SCR #409279 - fix: change spacing in winners section

--- a/src/engine-scss/layouts/home/winners/themes/_default.scss
+++ b/src/engine-scss/layouts/home/winners/themes/_default.scss
@@ -22,6 +22,10 @@
             &:last-child {
                 @include bm.get-mq-map('transform', $themeWinnersSection, 'translateItems');
             }
+
+            &:last-child {
+                @include bm.get-mq-map('margin', $themeWinnersSection, 'lastItemMargin');
+            }
         }
     }
 }
